# Lancer-bot

./: .gitignore  CMakeLists.txt  Lancer-bot  build-run.bat  build.bat  build.sh  readme.md  run.bat
src/: main.cpp
src/database/: chess_openings.db  chess_openings.sql  fen_notation.sql
src/engine/: board.cpp  board.hpp  movegen.hpp  search.hpp
src/eval/: evaluation.hpp
src/network/: network.hpp
